--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <input type="text" id="formula1">
 <input type="text" id="formula2">
 <button id="button" onclick="formula()">Submit</button>
-<p id="name"><br></p>
+<p id="answer1"></p>
+<p id="answer2"></p>
 <script src="index.js"></script>
 
 </body>
