--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 
+<b>Convalent Compound Calculator - Alpha 1.0<b>
 <input type="text" id="formula1">
 <input type="text" id="formula2">
 <button id="button" onclick="formula()">Submit</button>
