--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 </head>
 <body>
 
-<b>Convalent Compound Calculator - Alpha 1.0<b>
+<h1>Convalent Compound Calculator</h1>
+</b>Version: Alpha 1.0</b>
 <br>
 <input type="text" id="formula1">
 <input type="text" id="formula2">
