--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 
 <h1>Convalent Compound Calculator</h1>
-</b>Version: Alpha 1.0</b>
+<b>Version: Alpha 1.0</b>
 <br>
 <input type="text" id="formula1">
 <input type="text" id="formula2">
